implemented backend call to retrieve list of all workspaces and channels within them
