# backend/src/app.js
@@ -8,6 +8,7 @@ const OpenApiValidator = require('express-openapi-validator');
 
 const dmstream = require('./dmstream');
 const auth = require('./auth');
+const workspace = require('./workspace');
 const dummy = require('./dummy');
 
 const app = express();
@@ -33,7 +34,8 @@ app.use(
 
 app.get('/v0/dummy', dummy.get);
 // Your routes go here
-app.get('/v0/dms', auth.check, dmstream.getAllDMs)
+app.get('/v0/dms', auth.check, dmstream.getAllDMs);
+app.get('/v0/home', auth.check, workspace.getWorkspacesAndChannels);
 
 app.use((err, req, res, next) => {
   console.log('Message: ' + err);
